# aether-blender

./: .aether_state.json  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: NEW_FEATURE_CHECKLIST.md
scripts/: AGENTS.md  check_file_length.py  check_logging.py  check_tests_exist.py  install_addon.py  setup_blender.py  validate_feature.py
src/: AGENTS.md  __init__.py
src/ai/: AGENTS.md  __init__.py  anthropic_provider.py  exceptions.py  factory.py  gemini_provider.py  openai_provider.py  provider.py
src/ai/prompts/: __init__.py  system.py  templates.py
src/blender_addon/: AGENTS.md  __init__.py  executor.py  queue_handler.py  server.py
src/bridge/: AGENTS.md  __init__.py  client.py  exceptions.py  protocol.py
src/executor/: AGENTS.md  __init__.py  exceptions.py  history.py  retry.py  safe_exec.py
src/export/: AGENTS.md
src/gui/: AGENTS.md  __init__.py  chat_panel.py  main_window.py  message_widget.py  settings_dialog.py  signals.py  status_bar.py  styles.py  toast_manager.py
src/orchestrator/: AGENTS.md  __init__.py  exceptions.py  pipeline.py
src/project/: AGENTS.md
src/telemetry/: AGENTS.md  __init__.py  logger.py
tests/: AGENTS.md  conftest.py
tests/integration/: test_bridge_integration.py
tests/unit/: test_ai_provider.py  test_anthropic_provider.py  test_blender_launch.py  test_bridge_client.py  test_bridge_protocol.py  test_executor.py  test_gemini_provider.py  test_gui_chat_panel.py  test_gui_main_window.py  test_gui_message_widget.py  test_gui_settings_dialog.py  test_gui_signals.py  test_gui_status_bar.py  test_gui_styles.py  test_gui_toast_manager.py  test_openai_provider.py  test_orchestrator.py  test_provider_factory.py  test_sanity.py
